--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8"
+        "laravelcollective/html": "^5.8",
+        "laraveles/spanish": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
