--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,18 @@
         "php": "^7.1.3",
         "cviebrock/eloquent-sluggable": "^4.8",
         "fideloper/proxy": "^4.0",
+        "harvesthq/chosen": "^1.8",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8",
-        "laraveles/spanish": "^1.1",
-        "twbs/bootstrap": "4.3.1"
+        "laravelcollective/html": "^5.8"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
+        "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5"
     },
     "config": {
